Include FST library within benchmark